5-dotnet-mvc-ui/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: dotnetmvcclient
  name: dotnetmvcclient
spec:
  ports:
    - protocol: "TCP"
      port: 5400
      targetPort: 80
  selector:
    app: dotnetmvcclient
