5-dotnet-mvc-ui/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-dotnet-mvc-client-service
spec:
  rules:
  - host: react-dotnet-mvc-client
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dotnetmvcclient
            port: 
              number: 5400
